Changed spring boot version and added sonarque plugins and fixed test cases not running issue